Make Style Changes Based on IE Issues

--- a/src/styles/components/temp-placeholders.styl
+++ b/src/styles/components/temp-placeholders.styl
@@ -57,6 +57,7 @@
 .divider
   display: block
   margin: 1em auto
+  width: 10em
 
 .flex-row
   display: flex
